--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-essentials": "6.2.9",
-    "@storybook/react": "6.2.9",
+    "@storybook/addon-essentials": "6.4.0-alpha.13",
+    "@storybook/react": "6.4.0-alpha.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
@@ -55,7 +55,7 @@
     "lint-staged": "^11.0.0",
     "plop": "^2.7.4",
     "prettier": "^2.3.0",
-    "storybook-addon-next-router": "^2.0.4",
+    "storybook-addon-next-router": "^3.0.2",
     "typescript": "^4.3.2"
   }
 }
