--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/react": "6.4.0-alpha.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
